estilizei mais o css

--- a/index.html
+++ b/index.html
@@ -1,26 +1,36 @@
 <!-- Página Principal -->
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arquix</title>
+    <title>ARQUIX</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-    <header>
-        <h1>Arquix</h1>
+
+<body class="dark-bg">
+
+    <header class="navbar glass">
+        <h1 class="logo">ARQUIX<span>Leia</span></h1>
         <nav>
-            <a href="login.html">Login</a>
-            <a href="cadastro.html">Cadastrar</a>
+            <a href="login.html" class="nav-link">Login</a>
+            <a href="cadastro.html" class="btn-primary">Cadastrar</a>
         </nav>
     </header>
 
-    <section class="hero">
-        <h2>Bem-vindo(a) à sua Biblioteca Virtual</h2>
-        <p>Gerencie livros, leia online e organize sua coleção.</p>
-        <a href="login.html" class="btn">Entrar</a>
+    <section class="hero-container">
+        <div class="hero-text">
+            <h2>Sua biblioteca virtual Arquix</h2>
+            <p>Leia em onde tiver de forma online.</p>
+            <a href="login.html" class="btn-primary big">Começar</a>
+        </div>
     </section>
 
+    <footer class="rodape">
+        @ 2025 | Todos os direitos reservados aos Alunos.
+    </footer>
+
 </body>
+
 </html>
