--- a/cadastro.html
+++ b/cadastro.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro - Biblioteca</title>
+    <title>Cadastrar</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
 
-<div class="form-container">
-    <h2>Criar Conta</h2>
+<body class="dark-bg">
 
-    <form id="cadastroForm">
-        <label>Nome:</label>
-        <input type="text" required>
+    <div class="center-box glass form-box">
+        <h2 class="title">Criar Conta</h2>
 
-        <label>Email:</label>
-        <input type="email" required>
+        <form id="cadastroForm">
+            <label>Nome</label>
+            <input type="text" class="input-dark" required>
 
-        <label>Senha:</label>
-        <input type="password" required>
+            <label>Email</label>
+            <input type="email" class="input-dark" required>
 
-        <button type="submit" class="btn">Cadastrar</button>
-    </form>
+            <label>Senha</label>
+            <input type="password" class="input-dark" required>
 
-    <p>Já tem conta? <a href="login.html">Fazer Login</a></p>
-</div>
+            <button type="submit" class="btn-primary full">Cadastrar</button>
+        </form>
 
-<script src="js/script.js"></script>
+        <p class="switch">Já possui conta? <a href="login.html">Login</a></p>
+    </div>
+
+    <script src="js/script.js"></script>
 </body>
+
 </html>
