--- a/dashboard.html
+++ b/dashboard.html
@@ -1,49 +1,49 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biblioteca - Dashboard</title>
+    <title>Painel - Biblioteca</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
 
-<header>
-    <h1>Minha Biblioteca</h1>
-    <nav>
-        <a href="index.html">Sair</a>
-    </nav>
-</header>
+<body class="dark-bg">
 
-<section class="dashboard">
+    <header class="navbar glass">
+        <h1 class="logo">📖 Minha<span>Biblioteca</span></h1>
+        <nav>
+            <a href="index.html" class="nav-link">Sair</a>
+        </nav>
+    </header>
 
-    <div class="search-box">
-        <input type="text" id="pesquisa" placeholder="Pesquisar livro...">
-        <button onclick="pesquisarLivro()">Buscar</button>
-    </div>
+    <section class="dashboard-area">
 
-    <h2>Adicionar novo livro</h2>
+        <div class="search-box glass">
+            <input type="text" id="pesquisa" placeholder="Pesquisar livro..." class="input-dark">
+            <button onclick="pesquisarLivro()" class="btn-secondary">Buscar</button>
+        </div>
 
-    <form id="formLivro" class="add-livro">
-        <label>Título:</label>
-        <input type="text" id="titulo" required>
+        <div class="glass painel-add">
+            <h2>Cadastrar Novo Livro</h2>
 
-        <label>Autor:</label>
-        <input type="text" id="autor" required>
+            <form id="formLivro">
+                <input type="text" id="titulo" placeholder="Título do Livro" class="input-dark" required>
+                <input type="text" id="autor" placeholder="Autor" class="input-dark" required>
+                <input type="file" id="arquivo" accept=".pdf,.epub" class="input-dark" required>
 
-        <label>Arquivo (PDF ou EPUB):</label>
-        <input type="file" id="arquivo" accept=".pdf,.epub" required>
+                <button type="submit" class="btn-primary full">Adicionar</button>
+            </form>
+        </div>
 
-        <button type="submit">Adicionar</button>
-    </form>
+        <div class="glass painel-lista">
+            <h2>Livros Cadastrados</h2>
+            <div id="listaLivros"></div>
+        </div>
 
-    <hr>
+    </section>
 
-    <h2>Livros cadastrados</h2>
-    <div id="listaLivros" class="lista-livros"></div>
-
-</section>
-
-<script src="js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
+
 </html>
